--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>임시 페이지</title>
+  <meta charset="utf-8">
+  <title>캡스톤 디자인 | PLA팀</title>
 </head>
 <body>
-<h1>실험 중</h1>
+  <h1>페이지 제작 중...</h1>
+  <br>
+  <p>주차별 보고서, 발표 영상은 <a href="https://hansungcss-pla.tistory.com/">여기</a>에서 확인하세요</p>
 </body>
 </html>
