--- a/index.html
+++ b/index.html
@@ -3,7 +3,30 @@
 <head>
   <meta charset="utf-8">
   <title>캡스톤 디자인 | PLA팀</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+  
+ /* 
+  <style>
+  body, h1,h2,h3,h4,h5,h6 {font-family:"Lato", san-serif;}
+  body, html{
+    height:100%;
+    color : #777;
+    line-height:2.8;
+  }
+  .bgimg-1{
+    background-attatchment:fixed;
+    background-position:center;
+    background-repeat:no-repeat;
+    background-size: cover;
+  }
+  .bgimg-1{
+    background-image:url('');
+    min-height:100%
+  }
+</style>
+*/ 
 </head>
+
 <body>
   <h1>페이지 제작 중...</h1>
   <br>
